force-app/main/default/objects/Provider_Application__c/Provider_Application__c.object-meta.xml
<CustomObject>
    <label>Provider Application</label>
    <pluralLabel>Provider Applications</pluralLabel>
    <description>Object used to track and manage provider applications for verification within the organization.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Provider Application Name</label>
        <type>AutoNumber</type>
        <displayFormat>PA-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>