force-app/main/default/objects/Provider_Application__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <description>Provider's email address for communication and verification</description>
    <inlineHelpText>Enter the provider's primary contact email address</inlineHelpText>
    <type>Email</type>
</CustomField>