force-app/main/default/objects/Provider_Application__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Provider&apos;s first name for verification purposes</description>
    <inlineHelpText>Enter the provider&apos;s legal first name as it appears on their credentials</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>