force-app/main/default/objects/Provider_Application__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Provider&apos;s last name for verification purposes</description>
    <inlineHelpText>Enter the provider&apos;s legal last name as it appears on their credentials</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>