force-app/main/default/objects/Provider_Application__c/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <description>National Provider Identifier used for verification with external systems</description>
    <inlineHelpText>Enter the 10-digit National Provider Identifier (NPI) number</inlineHelpText>
    <type>Text</type>
    <length>10</length>
</CustomField>