force-app/main/default/objects/Provider_Application__c/fields/Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tier__c</fullName>
    <label>Risk Tier</label>
    <description>Risk classification level assigned during provider verification</description>
    <inlineHelpText>Indicates the risk level: Low (standard verification) or High (enhanced verification required)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>