force-app/main/default/objects/Provider_Application__c/validationRules/NPI_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NPI_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    LEN(NPI_Number__c) &lt;&gt; 10,
    NOT(ISNUMBER(NPI_Number__c))
)</errorConditionFormula>
    <errorDisplayField>NPI_Number__c</errorDisplayField>
    <errorMessage>NPI Number must be a 10-digit numeric value.</errorMessage>
</ValidationRule>